# TheBlogs

./: LICENSE  presentation_notes.txt  pyproject.toml
TheBlogs/: manage.py
TheBlogs/TheBlogs/: asgi.py  settings.py  urls.py  wsgi.py
TheBlogs/TheBlogsApp/: admin.py  apps.py  config.py  forms.py  models.py  streams.py  views.py
TheBlogs/TheBlogsApp/migrations/: 0001_initial.py  0002_user_alter_blogpost_author.py  0003_alter_blogpost_author_delete_user.py  0004_rename_creationdate_blogpost_creation_date.py  0005_alter_blogpost_creation_date.py  0006_alter_blogpost_author_comment.py
TheBlogs/TheBlogsApp/static/clean_blog/css/: custom.css
TheBlogs/TheBlogsApp/static/login/: additional.css  style.css
TheBlogs/TheBlogsApp/templates/: comments.html  filtered_blogs.html  index.html
TheBlogs/TheBlogsApp/templates/clean_blog/: index.html
TheBlogs/TheBlogsApp/templates/login/: index.html
TheBlogs/TheBlogsApp/templates/new_post/: index.html
TheBlogs/TheBlogsApp/templates/signup/: index.html
TheBlogs/TheBlogsApp/templates/single_post/: index.html
